Fixed the UI Alignment in Crop and Frame Section.

--- a/src/Containers/Export/SideBar/Frame/Frame.scss
+++ b/src/Containers/Export/SideBar/Frame/Frame.scss
@@ -1,12 +1,12 @@
-.frame-types-wrapper{
+.frame-types-wrapper {
+  margin-top: 100px;
   padding: 24px;
   color: var(--text-white);
   .frame-wrapper {
-   
     display: flex;
     // padding: 24px 24px 0px;
     margin-bottom: 24px;
-   
+
     img {
       width: 65px;
       height: 100px;
@@ -18,7 +18,6 @@
         font-size: 11px;
       }
     }
-    
   }
   .selected-frame {
     outline: 2px solid #005bab;
@@ -49,16 +48,16 @@
       .active {
         outline: 4px solid #005bab;
       }
-      
+
       .matting {
         background-color: #c4c4c4;
       }
       .default-matting {
         border: 10px solid white;
         width: 20px;
-        height: 20px
+        height: 20px;
       }
-      .small-matting { 
+      .small-matting {
         border: 5px solid white;
         width: 30px;
         height: 30px;
@@ -69,6 +68,5 @@
         height: 24px;
       }
     }
-   
   }
 }
