--- a/src/Containers/Export/SideBar/ImageCrop/ImageCrop.scss
+++ b/src/Containers/Export/SideBar/ImageCrop/ImageCrop.scss
@@ -4,7 +4,7 @@
 }
 
 .select-block {
-  margin: 80px 0px;
+  margin: 80px 0px 0px 0px;
 }
 
 .grid-container {
