--- a/src/Containers/Export/SideBar/SideBar.scss
+++ b/src/Containers/Export/SideBar/SideBar.scss
@@ -1,3 +1,10 @@
-.SideBar-wrapper{
+.sideBar-wrapper {
   background-color: #23292e;
+}
+
+.next-button {
+  float: right;
+  margin-right: 20px;
+  color: white;
+  cursor: pointer;
 }
